--- a/uj/zajecia/24-25z/assk/index.html
+++ b/uj/zajecia/24-25z/assk/index.html
@@ -56,6 +56,28 @@
 	</ol>
 </details>
 
+<details>
+	<summary class="h2">Tematy</summary>
+
+	<ul>
+		<li>akcje społeczne</li>
+		<li>architektura</li>
+		<li>ceramika i garncarstwo</li>
+		<li>dolmeny</li>
+		<li>filmy i seriale</li>
+		<li>folklor</li>
+		<li>fotografia</li>
+		<li>kaligrafia</li>
+		<li>kpop</li>
+		<li>malowidła ścienne</li>
+		<li>poezja</li>
+		<li>sztuka kulinarna</li>
+		<li>taniec</li>
+		<li>tatuaże</li>
+		<li>teatr muzyczny</li>
+	</ul>
+</details>
+
 <h2>Plan zajęć w semestrze zimowym 2024/2025</h2>
 
 <div class="class-schedule-container">
@@ -80,7 +102,7 @@
 				<th scope="row">2</th>
 				<td>14 października 2024</td>
 				<td class="schedule-lecture">Zajęcia 2</td>
-				<td class="schedule-lecture">malarstwo</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/2">malarstwo</a></td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
