--- a/uj/zajecia/24-25z/assk/zajecia/1/index.html
+++ b/uj/zajecia/24-25z/assk/zajecia/1/index.html
@@ -282,4 +282,26 @@
 	<li><a href="https://genius.com/Lee-hyun-jun-expiration-date-lyrics">https://genius.com/Lee-hyun-jun-expiration-date-lyrics</a></li>
 </ul>
 
+<h2>Rodzina w Korei:</h3>
+
+<ul>
+	<li>rodzina jako główny fundament społeczeństwa i podstawowa jednostka społeczna</li>
+	<li>relacje rodzinne wzorem dla relacji społecznych, struktury biznesu, władzy państwowej</li>
+	<li>tradycyjna rodzina = duża rodzina oparta na patriarchalnym porządku
+		<ul>
+			<li>gałąź strony ojca ważniejsza od gałęzi strony matki</li>
+			<li>męscy członkowie rodziny ważniejsi od żeńskich członków</li>
+			<li>niepodważalny autorytet męża dla żony i ojca dla dzieci</li>
+			<li>hyo (효, 孝) = obowiązek posłuszeństwa dzieci wobec ojca</li>
+		</ul>
+	</li>
+	<li>więzi i harmonia w rodzinie ważniejsze od indywidualizmu</li>
+	<li>tytuły rodzinne używane nawet w stosunku do osób niezwiązanych więzami krwi</li>
+	<li>wszystkie więzi w koreańskiej rodzinie oparte na hierarchii</li>
+</ul>
+
+<ul class="gallery">
+	<li><a href="uj/prelekcje/fsaa/2023/img/큰절.jpg"><img src="uj/prelekcje/fsaa/2023/img/큰절.jpg" alt="큰절"></a></li>
+</ul>
+
 </body></html>
