--- a/uj/zajecia/24-25z/klc2/index.html
+++ b/uj/zajecia/24-25z/klc2/index.html
@@ -26,160 +26,158 @@
 <h1>Korean Language Class (2) - Speaking</h1>
 
 <address>
-	dr Tomasz Wilczyński<br>
-	kontakt: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
-	konsultacje: poniedziałek 10.30–11.30, pokój -1.15
+	Dr Tomasz Wilczyński<br>
+	contact: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
+	office hours: Monday 10:30–11:30 AM, room -1.15
 </address>
 
 <details>
-	<summary class="h2">Warunki zaliczenia</summary>
+	<summary class="h2">Passing conditions</summary>
 
 	<ul>
-		<li>obecność: 30%</li>
-		<li>prace domowe: 10%</li>
-		<li>kolokwium: 30%</li>
-		<li>egzamin: 30%</li>
-		<li>bonus za obecność: 2%</li>
-		<li>bonus za prace domowe: 2%</li>
+		<li>attendance: 30%</li>
+		<li>homework: 10%</li>
+		<li>midterm examination: 30%</li>
+		<li>final examination: 30%</li>
+		<li>bonus for attendance: 2%</li>
+		<li>bonus for homework: 2%</li>
 	</ul>
 
-	<p>Dwie nieusprawiedliwione nieobecności nie wpływają na ocenę za obecność. Każda kolejna nieobecność skutkuje zmniejszeniem oceny za obecność o 10%, tj. z 30% na 20%, z 20% na 10%, z 10% na 0%. <strong>Warunkiem zaliczenia zajęć jest uczestnictwo w minimum 9 zajęciach oraz zaliczenie kolokwium i egzaminu.</strong></p>
+	<p>Two unwarranted absences do not affect the final score. Each subsequent absence results in the attendance score being reduced by 10%, i.e. from 30% to 20%, from 20% to 10%, and from 10% to 0%. <strong>In order to pass the course, the student must attend at least 9 lectures and take the midterm and final examinations.</strong></p>
 </details>
 
 <details>
-	<summary class="h2">Skala ocen</summary>
+	<summary class="h2">Grading scale</summary>
 
 	<ul>
-		<li>93-100%: bardzo dobry</li>
-		<li>85-92%: dobry plus</li>
-		<li>77-84%: dobry</li>
-		<li>69-76%: dostateczny plus</li>
-		<li>61-68%: dostateczny</li>
-		<li>0-60%: niedostateczny</li>
+		<li>93-100%: very good (5)</li>
+		<li>85-92%: good plus (4.5)</li>
+		<li>77-84%: good (4)</li>
+		<li>69-76%: satisfactory plus (3.5)</li>
+		<li>61-68%: satisfactory (3)</li>
+		<li>0-60%: unsatisfactory (2)</li>
 	</ul>
 </details>
 
 <details>
-	<summary class="h2">Prace domowe</summary>
+	<summary class="h2">Homework</summary>
 
 	<ol>
-		<li>Po każdych zajęciach rozwiąż zadaną pracę domową.</li>
-		<li>Zeskanowany plik prześlij e-mailem najpóźniej do północy z piątku na sobotę w tym samym tygodniu.</li>
+		<li>Do the homework given after each class.</li>
+		<li>Upload a scanned copy to MS Teams no later than midnight between Friday and Saturday on the same week.</li>
 	</ol>
 </details>
 
-<h2>Plan zajęć w semestrze zimowym 2024/2025</h2>
+<h2>Lecture schedule for winter semester 2024/2025</h2>
 
 <div class="class-schedule-container">
 	<table class="class-schedule">
 		<thead>
 			<tr>
-				<th scope="col">Tydzień</th>
-				<th scope="col">Data</th>
-				<th scope="col">Rodzaj</th>
-				<th scope="col">Temat</th>
+				<th scope="col">Week</th>
+				<th scope="col">Date</th>
+				<th scope="col">Type</th>
+				<th scope="col">Subject</th>
 			</tr>
 		</thead>
 
 		<tbody>
 			<tr>
 				<th scope="row">1</th>
-				<td>7 października 2024</td>
-				<td class="schedule-lecture">Zajęcia 1</td>
+				<td>7 October 2024</td>
+				<td class="schedule-lecture">Class 1</td>
 				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제1과</td>
 			</tr>
 			<tr>
 				<th scope="row">2</th>
-				<td>14 października 2024</td>
-				<td class="schedule-lecture">Zajęcia 2</td>
+				<td>14 October 2024</td>
+				<td class="schedule-lecture">Class 2</td>
 			</tr>
 		<tbody>
 		</tbody>
 			<tr>
 				<th scope="row">3</th>
-				<td>21 października 2024</td>
-				<td class="schedule-lecture">Zajęcia 3</td>
+				<td>21 October 2024</td>
+				<td class="schedule-lecture">Class 3</td>
 				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제2과</td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
-				<td>28 października 2024</td>
-				<td class="schedule-lecture">Zajęcia 4</td>
+				<td>28 October 2024</td>
+				<td class="schedule-lecture">Class 4</td>
 			</tr>
 		<tbody>
 		</tbody>
 			<tr>
 				<th scope="row">5</th>
-				<td>4 listopada 2024</td>
-				<td class="schedule-lecture">Zajęcia 5</td>
+				<td>4 November 2024</td>
+				<td class="schedule-lecture">Class 5</td>
 				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제3과</td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
-				<td>18 listopada 2024</td>
-				<td class="schedule-lecture">Zajęcia 6</td>
+				<td>18 November 2024</td>
+				<td class="schedule-lecture">Class 6</td>
 			</tr>
 		<tbody>
 		</tbody>
 			<tr>
 				<th scope="row">7</th>
-				<td>25 listopada 2024</td>
-				<td class="schedule-lecture">Zajęcia 7</td>
+				<td>25 November 2024</td>
+				<td class="schedule-lecture">Class 7</td>
 				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제4과</td>
 			</tr>
+			<tr>
+				<th scope="row" rowspan="2">8</th>
+				<td>2 December 2024</td>
+				<td class="schedule-lecture">Class 8</td>
 			</tr>
 			<tr>
-				<th scope="row">8</th>
-				<td>2 grudnia 2024</td>
-				<td class="schedule-lecture">Zajęcia 8</td>
+				<td>6 December 2024 <nobr>(6:30-8:00 PM, room 0.05)</nobr></td>
+				<td class="schedule-exam">Exam</td>
+				<td class="schedule-exam">Midterm Examination</td>
 			</tr>
 		<tbody>
 		</tbody>
 			<tr>
 				<th scope="row">9</th>
-				<td>6 grudnia 2024 <nobr>(18.30-20.00, sala 0.05)</nobr></td>
-				<td class="schedule-exam" colspan="2">Kolokwium</td>
-			</tr>
-		<tbody>
-		</tbody>
-			<tr>
-				<th scope="row">10</th>
-				<td>9 grudnia 2024</td>
-				<td class="schedule-lecture">Zajęcia 9</td>
+				<td>9 December 2024</td>
+				<td class="schedule-lecture">Class 9</td>
 				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제5과</td>
 			</tr>
 			<tr>
-				<th scope="row">11</th>
-				<td>16 grudnia 2024</td>
-				<td class="schedule-lecture">Zajęcia 10</td>
+				<th scope="row">10</th>
+				<td>16 December 2024</td>
+				<td class="schedule-lecture">Class 10</td>
 			</tr>
 		<tbody>
 		</tbody>
 			<tr>
-				<th scope="row">12</th>
-				<td>13 stycznia 2025</td>
-				<td class="schedule-lecture">Zajęcia 11</td>
+				<th scope="row">11</th>
+				<td>13 January 2025</td>
+				<td class="schedule-lecture">Class 11</td>
 				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제6과</td>
 			</tr>
 			<tr>
+				<th scope="row">12</th>
+				<td>20 January 2025</td>
+				<td class="schedule-lecture">Class 12</td>
+			</tr>
+		<tbody>
+		</tbody>
+			<tr>
 				<th scope="row">13</th>
-				<td>20 stycznia 2025</td>
-				<td class="schedule-lecture">Zajęcia 12</td>
+				<td>27 January 2025</td>
+				<td class="schedule-lecture">Class 13</td>
+				<td class="schedule-lecture">Revision</td>
 			</tr>
 		<tbody>
 		</tbody>
 			<tr>
 				<th scope="row">14</th>
-				<td>27 stycznia 2025</td>
-				<td class="schedule-lecture">Zajęcia 13</td>
-				<td class="schedule-lecture">Powtórzenie materiału</td>
-			</tr>
-		<tbody>
-		</tbody>
-			<tr>
-				<th scope="row">15</th>
-				<td>3 lutego 2025 <nobr>(13.15–14.45)</nobr></td>
-				<td class="schedule-exam" colspan="2">Egzamin</td>
+				<td>3 February 2025</td>
+				<td class="schedule-exam">Exam</td>
+				<td class="schedule-exam">Final examination</td>
 			</tr>
 		</tbody>
 	</table>
