--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -146,8 +146,8 @@
 			<tr>
 				<th scope="row">7</th>
 				<td>30 April 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">business</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/7">'갑질 끝판왕' 아디다스, 상생 위해 한 건 '공문 한 장'</a></td>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
@@ -156,8 +156,8 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="6">9</th>
-				<td rowspan="6">14 May 2025</td>
+				<th scope="row" rowspan="5">9</th>
+				<td rowspan="5">14 May 2025</td>
 				<td class="schedule-presentation">Homework 1</td>
 				<td class="schedule-presentation">Julia Domińska - entertainment industry</td>
 				<td class="schedule-presentation"></td>
@@ -174,16 +174,11 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 4</td>
-				<td class="schedule-presentation">Edyta Płonka - successful Korean writers</td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<td class="schedule-presentation">Homework 5</td>
 				<td class="schedule-presentation">Jaeseung Seo - military service in Korea</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<td class="schedule-presentation">Homework 6</td>
+				<td class="schedule-presentation">Homework 5</td>
 				<td class="schedule-presentation">Apolonia Strugarek - influence of social media</td>
 				<td class="schedule-presentation"></td>
 			</tr>
@@ -212,8 +207,13 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="3">13</th>
-				<td rowspan="3">11 June 2025</td>
+				<th scope="row" rowspan="4">13</th>
+				<td rowspan="4">11 June 2025</td>
+				<td class="schedule-presentation">Homework 6</td>
+				<td class="schedule-presentation">Edyta Płonka - successful Korean writers</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
 				<td class="schedule-presentation">Homework 7</td>
 				<td class="schedule-presentation">Julia Trzaska - human rights activism</td>
 				<td class="schedule-presentation"></td>
