--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -268,13 +268,15 @@
 			<tr>
 				<th scope="row">9</th>
 				<td>21 maja 2025</td>
-				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture">polityka</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5">“정치적 성향 다르면 연애∙결혼도 안 해”</a></td>
+				<td class="schedule-lecture" rowspan="2">Zajęcia</td>
+				<td class="schedule-lecture" rowspan="2">polityka</td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5">“정치적 성향 다르면 연애∙결혼도 안 해”</a></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">10</th>
-				<td rowspan="2">28 maja 2025</td>
+				<th scope="row" rowspan="3">10</th>
+				<td rowspan="3">28 maja 2025</td>
+			</tr>
+			<tr>
 				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2">Kolokwium 2</a></td>
 				<td class="schedule-exam" colspan="2">zwierzęta</td>
 			</tr>
@@ -369,17 +371,17 @@
 				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/ljk5/zajecia/znaki/3">文 글월 문</a></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">6</th>
-				<td rowspan="2">29 maja 2025</td>
+				<th scope="row">6</th>
+				<td>29 maja 2025</td>
 			</tr>
 			<tr>
+				<th scope="row" rowspan="2">7</th>
+				<td rowspan="2">5 czerwca 2025</td>
 				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium<!--/a--></td>
 				<td class="schedule-exam"></td>
 			</tr>
 			<tr>
-				<th scope="row">7</th>
-				<td>5 czerwca 2025</td>
-				<td class="schedule-lecture" rowspan="3">Zajęcia</td>
+				<td class="schedule-lecture" rowspan="2">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
@@ -389,15 +391,8 @@
 			</tr>
 			<tr>
 				<th scope="row">9</th>
-				<td>19 czerwca 2025</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-		</tbody>
-		<tbody>
-			<tr>
-				<th scope="row">10</th>
-				<td>26 czerwca 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(10.00–11.00, s. 2.01)</nobr></a></td>
+				<td>17 czerwca 2025</td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(?–?, s. 2.01)</nobr></a></td>
 				<td class="schedule-exam"></td>
 			</tr>
 		</tbody>
