--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -197,7 +197,7 @@
 			<tr>
 				<th scope="row">11</th>
 				<td>28 May 2025</td>
-				<td class="schedule-lecture">underground tattoo scene in South Korea</td>
+				<td class="schedule-lecture">tattoo scene in South Korea</td>
 				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/10">문신하셨나요? 가려주세요, 아니면 나가주세요</a></td>
 			</tr>
 			<tr>
@@ -232,8 +232,8 @@
 		<tbody>
 			<tr>
 				<th scope="row">14</th>
-				<td>18 June 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/mkmb/test/4"-->Examination <nobr>(16.45–17.45, 1.01)</nobr></a></td>
+				<td>13 June 2025</td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/mkmb/test/4"-->Examination <nobr>(18.30–19.30, 1.01)</nobr></a></td>
 				<td class="schedule-exam"></td>
 				<td class="schedule-exam"></td>
 			</tr>
