--- a/viiilo/zajecia/25-26/jk1/index.html
+++ b/viiilo/zajecia/25-26/jk1/index.html
@@ -39,7 +39,7 @@
 			<tr>
 				<th scope="row">4</th>
 				<td>2025년 10월 9일</td>
-				<td class="schedule-lecture" colspan="2" rowspan="5"><a href="viiilo/zajecia/25-26/jk1/zajecia/1">0과. 한글을 배워요</a></td>
+				<td class="schedule-lecture" colspan="2" rowspan="6"><a href="viiilo/zajecia/25-26/jk1/zajecia/1">0과. 한글을 배워요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
@@ -60,22 +60,20 @@
 			<tr>
 				<th scope="row">9</th>
 				<td>2025년 11월 20일</td>
-				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/25-26/jk1/zajecia/2">1과. 안녕하세요? 저는 안나예요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">10</th>
 				<td>2025년 12월 4일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2">발음 연습</td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
 				<td>2025년 12월 11일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk1/zajecia/2">1과. 안녕하세요? 저는 안나예요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">12</th>
 				<td>2025년 12월 18일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">13</th>
