--- a/viiilo/zajecia/25-26/jk3/index.html
+++ b/viiilo/zajecia/25-26/jk3/index.html
@@ -66,7 +66,7 @@
 			<tr>
 				<th scope="row">8</th>
 				<td>2025년 11월 20일</td>
-				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/4">3. 요즘 아침마다 회의가 있어요</a></td>
+				<td class="schedule-lecture" colspan="2" rowspan="3"><a href="viiilo/zajecia/25-26/jk3/zajecia/4">3. 요즘 아침마다 회의가 있어요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
@@ -80,7 +80,7 @@
 			<tr>
 				<th scope="row">11</th>
 				<td>2025년 12월 11일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/5">4. 청바지에다가 티셔츠를 입으려고 해요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">12</th>
