--- a/uj/zajecia/25-26z/ljk4/index.html
+++ b/uj/zajecia/25-26z/ljk4/index.html
@@ -201,7 +201,7 @@
 			<tr>
 				<th scope="row">11</th>
 				<td>2026년 1월 14일</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/5">一 한 일</a></td>
 			</tr>
 			<tr>
 				<th scope="row">12</th>
