--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -109,8 +109,7 @@
 			<tr>
 				<th scope="row">17</th>
 				<td>24 kwietnia 2025</td>
-				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/9">5과. 빵하고 우유를 사요</a></td>
-				<td class="schedule-presentation" rowspan="2"><!--a href="viiilo/zajecia/24-25z/jk1/zajecia/9-1"></a--></td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/9">5과. 빵하고 우유를 사요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">18</th>
@@ -119,12 +118,11 @@
 			<tr>
 				<th scope="row">19</th>
 				<td>22 maja 2025</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/10">6과. 고유어 수</a></td>
 			</tr>
 			<tr>
 				<th scope="row">20</th>
 				<td>29 maja 2025</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">21</th>
