--- a/uj/index.html
+++ b/uj/index.html
@@ -19,7 +19,7 @@
 	Uniwersytet Jagielloński w Krakowie<br>
 	<hr>
 	kontakt: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
-	środa: wtorek 15.00–16.00, pokój -1.15<br>
+	konsultacje: środa 15.00–16.00, pokój -1.15<br>
 </address>
 
 <h2>Zajęcia</h2>
@@ -29,7 +29,7 @@
 <ul>
 	<li><!--a href="uj/zajecia/24-25l/klc2"!-->Korean Language Class (2)</a></li>
 	<li><a href="uj/zajecia/24-25l/ljk5">Lektorat języka koreańskiego - poziom 5</a></li>
-	<li><!--a href="uj/zajecia/24-25l/mkmb"-->Modern Korean in Media and Business (3)<!--/a--></li>
+	<li><a href="uj/zajecia/24-25l/mkmb">Modern Korean in Media and Business (3)</a></li>
 </ul>
 
 <details>
