--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -223,8 +223,8 @@
 			<tr>
 				<th scope="row">14</th>
 				<td>13 June 2025</td>
-				<td class="schedule-exam"><a href="uj/zajecia/24-25l/mkmb/test/3">Examination <nobr>(18.30–19.30, 1.01)</nobr></a></td>
-				<td class="schedule-exam" colspan="2"></td>
+				<td class="schedule-exam">Examination <nobr>(18.30–19.30, 1.01)</nobr></td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/mkmb/test/3">North Korea; tattoo scene in South Korea</a></td>
 			</tr>
 		</tbody>
 	</table>
