--- a/uj/zajecia/24-25z/itas/zajecia/1/index.html
+++ b/uj/zajecia/24-25z/itas/zajecia/1/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><html lang="pl"><head><meta charset="utf-8">
-	<base href="https://twilczynski.com/">
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8">
+	<base href="file://C:/Users/TW86/Desktop/Pulpit/Praca/Uniwersytet%20Jagielloński/WWW/uj/">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 	<meta name="robots" content="none">
 	<link rel="icon" href="data:,">
-	<link rel="stylesheet" href="css/all.css">
-	<link rel="stylesheet" media="print" href="css/print.css">
+	<link rel="stylesheet" href="uj/css/all.css">
+	<link rel="stylesheet" media="print" href="uj/css/print.css">
 
 	<title>Introduction to Asian Studies</title>
 	<meta name="author" content="Tomasz Wilczyński">
