--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/index.html
@@ -225,7 +225,7 @@
 	<ol>
 		<li>향기를 없애기</li>
 		<li>색깔을 변형시키기</li>
-		<li>흡수력을 떨어뜨리기</li>
+		<li>흡수력을 떨어뜨리기 <strong class="correct">✓</strong></li>
 		<li>촉감을 거칠게 만들기</li>
 	</ol>
 </div>
@@ -235,7 +235,7 @@
 		<p>집에서 채소를 보관하다 보면 채소가 쉽게 시든다. 채소가 시드는 이유는 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 때문이다. 그래서 채소는 시간이 갈수록 시들시들 말라간다. 시든 채소를 살리려면 50도의 뜨거운 물에 넣어 씻으면 된다. 그러면 순간적으로 충분한 물이 흡수되면서 채소가 다시 싱싱해진다.</p>
 	</div>
 	<ol>
-		<li>수분이 점점 빠져나가기</li>
+		<li>수분이 점점 빠져나가기 <strong class="correct">✓</strong></li>
 		<li>세균이 갑자기 많아지기</li>
 		<li>호흡이 갈수록 느려지기</li>
 		<li>씻을 때 뜨거운 물로 씻기</li>
@@ -251,7 +251,7 @@
 	<ol>
 		<li>과연</li>
 		<li>만약</li>
-		<li>게다가</li>
+		<li>게다가 <strong class="correct">✓</strong></li>
 		<li>이처럼</li>
 	</ol>
 </div>
@@ -260,7 +260,7 @@
 	<ol>
 		<li>해파리는 바다 생태계에 피해를 준다.</li>
 		<li>해파리는 잡기 어려운 먹이 자원이다.</li>
-		<li>해파리는 여러 동물의 먹이가 되고 있다.</li>
+		<li>해파리는 여러 동물의 먹이가 되고 있다. <strong class="correct">✓</strong></li>
 		<li>해파리는 대부분 콜라겐으로 이루어져 있다.</li>
 	</ol>
 </div>
