--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/2/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/2/index.html
@@ -18,7 +18,7 @@
 	<h3>1.</h3>
 	<p>책을 많이 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 지식을 쌓을 수 있다.</p>
 	<ol>
-		<li>읽으면</li>
+		<li>읽으면 <strong class="correct">✓</strong></li>
 		<li>읽든지</li>
 		<li>읽지만</li>
 		<li>읽거나</li>
@@ -29,7 +29,7 @@
 	<p>꽃이 피기 시작하는 걸 보니 봄이 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p>
 	<ol>
 		<li>오곤 한다</li>
-		<li>온 모양이다</li>
+		<li>온 모양이다 <strong class="correct">✓</strong></li>
 		<li>오는 편이다</li>
 		<li>온 적이 있다</li>
 	</ol>
@@ -42,7 +42,7 @@
 	<ol>
 		<li>들리다가</li>
 		<li>들리더라도</li>
-		<li>들릴 정도로</li>
+		<li>들릴 정도로 <strong class="correct">✓</strong></li>
 		<li>들릴 때까지</li>
 	</ol>
 </div>
@@ -53,7 +53,7 @@
 		<li>꾸밀 만하다</li>
 		<li>꾸미기가 쉽다</li>
 		<li>꾸밀 수도 있다</li>
-		<li>꾸미기에 달려 있다</li>
+		<li>꾸미기에 달려 있다 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -66,7 +66,7 @@
 	<ol>
 		<li>안경</li>
 		<li>침대</li>
-		<li>운동화</li>
+		<li>운동화 <strong class="correct">✓</strong></li>
 		<li>노트북</li>
 	</ol>
 </div>
@@ -77,7 +77,7 @@
 	</div>
 	<ol>
 		<li>공원</li>
-		<li>식당</li>
+		<li>식당 <strong class="correct">✓</strong></li>
 		<li>꽃집</li>
 		<li>서점</li>
 	</ol>
@@ -89,7 +89,7 @@
 	</div>
 	<ol>
 		<li>환경 보호</li>
-		<li>생활 예절</li>
+		<li>생활 예절 <strong class="correct">✓</strong></li>
 		<li>건강 관리</li>
 		<li>봉사 활동</li>
 	</ol>
@@ -100,7 +100,7 @@
 		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/2/img/8.png" alt="8">
 	</div>
 	<ol>
-		<li>안전 규칙</li>
+		<li>안전 규칙 <strong class="correct">✓</strong></li>
 		<li>신청 방법</li>
 		<li>사용 순서</li>
 		<li>교환 안내</li>
