--- a/uj/zajecia/25-26z/ljk4/zajecia/znaki/2/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/znaki/2/index.html
@@ -119,52 +119,52 @@
 	<tr>
 		<td>分明</td>
 		<td>(배우, 목소리)</td>
-		<td>이 배우를 좋아하는 이유는 분명(分明)한 목소리 때문이에요.</td>
+		<td>이 배우를 좋아하는 이유는 <strong>분명(分明)</strong>한 목소리 때문이에요.</td>
 	</tr>
 	<tr>
 		<td>分斷</td>
 		<td>(한반도, 70년)</td>
-		<td>한반도는 70년 동안 가운데에서 대한민국과 조선민주주의인민공화국으로 분단(分斷)되어 왔어요.</td>
+		<td>한반도는 70년 동안 가운데에서 대한민국과 조선민주주의인민공화국으로 <strong>분단(分斷)</strong>되어 왔어요.</td>
 	</tr>
 	<tr>
 		<td>分擔</td>
 		<td>(직원, 업무)</td>
-		<td>월요일에 우리 사장님이 신입직원들에게 업무를 분담(分擔)하셔서 그들은 많이 떨려요.</td>
+		<td>월요일에 우리 사장님이 신입직원들에게 업무를 <strong>분담(分擔)</strong>하셔서 그들은 많이 떨려요.</td>
 	</tr>
 	<tr>
 		<td>分量</td>
 		<td>(학생들, 500자)</td>
-		<td>학생들이 오늘 숙제로 500자의 작문을 써야 해서 어제보다 분량(分量)이 크게 늘어났어요.</td>
+		<td>학생들이 오늘 숙제로 500자의 작문을 써야 해서 어제보다 <strong>분량(分量)</strong>이 크게 늘어났어요.</td>
 	</tr>
 	<tr>
 		<td>分類</td>
 		<td>(책, 주제)</td>
-		<td>휴가 때 자원봉사로 도서관에서 주제에 따라 모든 책을 (적절하게) 분류(分類)했어요.</td>
+		<td>휴가 때 자원봉사로 도서관에서 주제에 따라 모든 책을 (적절하게) <strong>분류(分類)</strong>했어요.</td>
 	</tr>
 	<tr>
 		<td>分離</td>
 		<td>(식당, 흡연석, 금연석)</td>
-		<td>식당에서 흡연석과 금역석을 분리(分離)해서 피운 담배의 연기가 식사하는 손님에게 피해를 주지 않아요.</td>
+		<td>식당에서 흡연석과 금역석을 <strong>분리(分離)</strong>해서 피운 담배의 연기가 식사하는 손님에게 피해를 주지 않아요.</td>
 	</tr>
 	<tr>
 		<td>分配</td>
 		<td>(자녀, 재산)</td>
-		<td></td>
+		<td>부모가 돌아가신 후에 자녀 사이에 재산을 <strong>분배(分配)</strong>해야 한다.</td>
 	</tr>
 	<tr>
 		<td>分析</td>
 		<td>(우리 팀, 실패 원인)</td>
-		<td></td>
+		<td>실패 원인을 <strong>분석(分析)</strong>한 결과는 우리 팀의 연습 부족이었다.</td>
 	</tr>
 	<tr>
 		<td>分野</td>
 		<td>(한국, 정보통신)</td>
-		<td></td>
+		<td>정보통신은 한국에서 가장 발달된 <strong>분야(分野)</strong>예요.</td>
 	</tr>
 	<tr>
 		<td>分布</td>
 		<td>(식물, 해안)</td>
-		<td></td>
+		<td>아시아와 유럽 해안에 <strong>분포(分布)</strong>하는 식물의 유형은 석창포예요.</td>
 	</tr>
 </table>
 
