--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -198,8 +198,8 @@
 				<th scope="row" rowspan="2">8</th>
 				<td rowspan="2">6 grudnia 2024</td>
 				<td class="schedule-exam">Kolokwium 2 (8.00–8.30)</td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">opieka psychologiczna/psychiatryczna</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25z/wats3-1/testy/2">수면 장애·도박 빚까지 … 청소년 스마트폰 중독 심각</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
