--- a/uj/zajecia/24-25z/wats3-1/zajecia/7/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/7/index.html
@@ -48,10 +48,25 @@
 <h3>번역</h3>
 
 <p>0. 윤 대통령 계엄 선포부터 탄핵 소추까지 5분 요약</p>
+<ul>
+	<li>5-minutowe podsumowanie od ogłoszenia stanu wojennego przez prezydenta Yoon Suk Yeola aż do złożenia wniosku o odwołanie go ze stanowiska</li>
+</ul>
 <p>1. 비상계엄 선포는 1979년 10월 26일 박정희 전 대통령 사망 이후 45년 만이다.</p>
+<ul>
+	<li>Jest to pierwsze ogłoszenie stanu wojennego po 45 latach od śmierci byłego prezydenta Parka Chung Hee w dniu 26 października 1979 roku.</li>
+</ul>
 <p>2-2. 3일 오후 10시 24분, 윤 대통령은 "저는 북한 공산세력 위협으로부터 자유 대한민국을 수호하고</p>
+<ul>
+	<li>3 grudnia, godz. 22.24 - prezydent Yoon powiedział: „Aby obronić wolność Republiki Korei przed zagrożeniem ze strony północnokoreańskich sił komunistycznych,</li>
+</ul>
 <p>2-3. 우리 국민의 자유와 행복을 약탈하고 있는 파렴치한 종북 반국가세력들을 척결하고</p>
+<ul>
+	<li>oczyścić z bezczelnych, propółnocnokoreańskich, antypaństwowych sił, które grabią wolność i szczęście naszych obywateli,</li>
+</ul>
 <p>2-4. 자유 헌정질서를 지키기 위해 비상계엄을 선포한다"라고 했다.</p>
+<ul>
+	<li>oraz zachować porządek wolności konstytucyjnej, ogłaszam stan wojenny”.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -77,7 +92,16 @@
 <h3>번역</h3>
 
 <p>3. 3일 오후 11시 27분, 계엄사령관으로 임명된 박안수 육군참모총장은 "일체의 정치활동"을 금지한다고 밝혔다.</p>
+<ul>
+	<li>3 grudnia, godz. 23.27 - Dowódca Generalny Wojsk Lądowych Park An-su, który został wyznaczony na dowódcę stanu wojennego, ogłosił, że zabroniona jest „wszelka działalność polityczna”.</li>
+</ul>
 <p>4. 4일 0시 27분, 계엄군은 국회로 집결해 진입을 시도했다.</p>
+<ul>
+	<li>4 grudnia, godz. 00.27 - zgromadzeni przed parlamentem żołnierze podjęli próbę dostania się do środka.</li>
+</ul>
+
+<h2 class="homework">Praca domowa</h2>
+
 <p>5-1. 계엄군은 2층 창문을 깨고 강제 진입했고,</p>
 <p>5-2. 당직자들은 계엄군에 소화기를 분사하면서 아수라장이 됐다.</p>
 <p>6. 0시 45분께 계엄군은 국회 본회의장에 도착했지만, 안까지 들어가진 못했다.</p>
@@ -112,6 +136,8 @@
 <p>9. 오전 4시 30분, 정부는 윤 대통령 주재 국무회의에서 비상계엄을 해제했다.</p>
 <p>10. 오전 4시 22분, 계엄에 투입된 병력을 부대로 복귀시켰다.</p>
 <p>11. 오후 2시 40분, 민주당 등 야 6당은 윤 대통령에 대한 탄핵소추안을 발의했다.</p>
+
+<hr class="homework">
 
 <h2>Źródło:</h2>
 
