--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -212,8 +212,8 @@
 				<th scope="row" rowspan="2">8</th>
 				<td rowspan="2">6 grudnia 2024</td>
 				<td class="schedule-exam">Kolokwium 2 (9.45–10.15)</td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">starzenie się społeczeństwa</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25z/wats3-2/testy/2">빈곤하고 외로운 우울한 韓 노인들, 급기야 자살 선택하기도</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
