--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -118,7 +118,7 @@
 			<tr>
 				<th scope="row">19</th>
 				<td>22 maja 2025</td>
-				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/10">6과. 고유어 수</a></td>
+				<td class="schedule-lecture" colspan="3" rowspan="3"><a href="viiilo/zajecia/24-25z/jk1/zajecia/10">6과. 사과 다섯 개 주세요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">20</th>
@@ -127,7 +127,6 @@
 			<tr>
 				<th scope="row">21</th>
 				<td>5 czerwca 2025</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">22</th>
