--- a/viiilo/zajecia/24-25z/jk1/zajecia/10/index.html
+++ b/viiilo/zajecia/24-25z/jk1/zajecia/10/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" media="print" href="viiilo/css/print.css">
 </head><body class="home">
 
-<h1>Język koreański - poziom podstawowy<br><br>6과. 고유어 수</h1>
+<h1>Język koreański - poziom podstawowy<br><br>6과. 사과 다섯 개 주세요</h1>
 
 <h2>교과서</h2>
 
