--- a/viiilo/index.html
+++ b/viiilo/index.html
@@ -2,7 +2,7 @@
 	<meta name="robots" content="none">
 	<meta name="viewport" content="height=device-height, width=device-width, initial-scale=1">
 
-	<title>dr Tomasz Wilczyński, UJ</title>
+	<title>dr Tomasz Wilczyński, VIII LO</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
 	<base href="https://twilczynski.com/">
