--- a/viiilo/zajecia/24-25z/jk1/zajecia/1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/zajecia/1/index.html
@@ -90,8 +90,8 @@
 </ul>
 
 <ul class="gallery">
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/ODrPJzNuCXI"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/ODrPJzNuCXI.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 1]"></a></li>
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/luq8hUTViv0"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/luq8hUTViv0.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 2]"></a></li>
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/ODrPJzNuCXI"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/ODrPJzNuCXI.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 1]"></a></li>
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/luq8hUTViv0"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/luq8hUTViv0.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 2]"></a></li>
 </ul>
 
 </body></html>
