--- a/viiilo/zajecia/25-26/jk2/index.html
+++ b/viiilo/zajecia/25-26/jk2/index.html
@@ -39,12 +39,11 @@
 			<tr>
 				<th scope="row">2</th>
 				<td>2025년 10월 8일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/2">1. 일곱 시에 시작해요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
 				<td>2025년 10월 15일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
