--- a/viiilo/zajecia/25-26/jk2/zajecia/1/index.html
+++ b/viiilo/zajecia/25-26/jk2/zajecia/1/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" media="print" href="viiilo/.res/print.css">
 </head><body class="home">
 
-<h1>한국어 3급<br><br>1과. 저는 프로그램 만드는 일을 해요</h1>
+<h1>한국어 3급<br><br>7과. 일곱 시에 시작해요</h1>
 
 <h2>교과서</h2>
 
@@ -19,13 +19,19 @@
 	<li>
 		<div>1번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_S_2A_01_1.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_S_1A_07_1.mp3"></audio>
 		</div>
 	</li>
 	<li>
 		<div>2번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_S_2A_01_2.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_S_1A_07_2.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>3번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_S_1A_07_3.mp3"></audio>
 		</div>
 	</li>
 </ul>
@@ -36,25 +42,31 @@
 	<li>
 		<div>1번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_W_2A_01_1.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_W_1A_07_1.mp3"></audio>
 		</div>
 	</li>
 	<li>
 		<div>2번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_W_2A_01_2.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_W_1A_07_2.mp3"></audio>
 		</div>
 	</li>
 	<li>
 		<div>3번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_W_2A_01_3.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_W_1A_07_3.mp3"></audio>
 		</div>
 	</li>
 	<li>
 		<div>4번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_W_2A_01_4.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_W_1A_07_4.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>4번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_W_1A_07_5.mp3"></audio>
 		</div>
 	</li>
 </ul>
@@ -65,19 +77,7 @@
 	<li>
 		<div>1번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_E_2A_01_1.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>2번 듣기</div>
-		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_E_2A_01_2.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>3번 듣기</div>
-		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_E_2A_01_3.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk3/pliki/SJ_E_1A_07_1.mp3"></audio>
 		</div>
 	</li>
 </ul>
