--- a/viiilo/zajecia/25-26/jk3/index.html
+++ b/viiilo/zajecia/25-26/jk3/index.html
@@ -48,7 +48,7 @@
 			<tr>
 				<th scope="row">4</th>
 				<td>2025년 10월 9일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/2">1. 저는 프로그램 만드는 일을 해요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
