--- a/uj/zajecia/25-26z/ljk4/index.html
+++ b/uj/zajecia/25-26z/ljk4/index.html
@@ -113,13 +113,13 @@
 			</tr>
 			<tr>
 				<th scope="row" rowspan="4">6</th>
-				<td rowspan="4">2025년 11월 12일</td>
+				<td rowspan="4">2025년 11월 19일</td>
 				<td class="schedule-exam">읽기</td>
 				<td class="schedule-exam">시험 1</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/2">시험지 2</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-exam">한자</td>
@@ -127,20 +127,10 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/3">文 글월 문</a></td>
 			</tr>
 			<tr>
 				<th rowspan="2" scope="row">7</th>
-				<td rowspan="2">2025년 11월 19일</td>
-				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th rowspan="2" scope="row">8</th>
 				<td rowspan="2">2025년 11월 26일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
@@ -150,7 +140,7 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">9</th>
+				<th rowspan="2" scope="row">8</th>
 				<td rowspan="2">2025년 12월 3일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
@@ -160,7 +150,7 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">10</th>
+				<th rowspan="2" scope="row">9</th>
 				<td rowspan="2">2025년 12월 10일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
@@ -170,7 +160,7 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="4">11</th>
+				<th scope="row" rowspan="4">10</th>
 				<td rowspan="4">2025년 12월 17일</td>
 				<td class="schedule-exam">읽기</td>
 				<td class="schedule-exam">시험 2</td>
@@ -188,7 +178,7 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">12</th>
+				<th rowspan="2" scope="row">11</th>
 				<td rowspan="2">2026년 1월 14일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
@@ -198,7 +188,7 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">13</th>
+				<th rowspan="2" scope="row">12</th>
 				<td rowspan="2">2025년 1월 21일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
@@ -208,7 +198,7 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">14</th>
+				<th rowspan="2" scope="row">13</th>
 				<td rowspan="2">2025년 1월 28일</td>
 				<td class="schedule-lecture">읽기</td>
 				<td class="schedule-lecture"></td>
@@ -218,7 +208,7 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">15</th>
+				<th rowspan="2" scope="row">14</th>
 				<td rowspan="2">2025년 2월 4월</td>
 				<td class="schedule-exam">읽기</td>
 				<td class="schedule-exam">기말시험</td>
