--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/2/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/2/index.html
@@ -114,7 +114,7 @@
 		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/2/img/9.png" alt="9">
 	</div>
 	<ol>
-		<li>이 행사는 한 달 동안 진행된다.</li>
+		<li>이 행사는 한 달 동안 진행된다. <strong class="correct">✓</strong></li>
 		<li>사진은 이메일로 제출해야 한다.</li>
 		<li>인주시에서 올해 찍은 사진을 내면 된다.</li>
 		<li>이 행사에 참여하면 인주시의 옛날 사진을 받는다.</li>
@@ -128,7 +128,7 @@
 	<ol>
 		<li>용돈 중 물건 구입비의 비율이 가장 낮았다.</li>
 		<li>학원비 사용은 교통비보다 두 배 이상 많았다.</li>
-		<li>대학생들은 용돈의 절반 이상을 식비로 지출했다.</li>
+		<li>대학생들은 용돈의 절반 이상을 식비로 지출했다. <strong class="correct">✓</strong></li>
 		<li>대학생들은 문화생활비보다 교통비를 더 적게 사용했다.</li>
 	</ol>
 </div>
@@ -139,7 +139,7 @@
 	</div>
 	<ol>
 		<li>이 작가가 받은 상은 작년에 만들어졌다.</li>
-		<li>이 작가는 한국인 중 처음으로 이 상을 받았다.</li>
+		<li>이 작가는 한국인 중 처음으로 이 상을 받았다. <strong class="correct">✓</strong></li>
 		<li>이 작가는 자신이 직접 경험한 이야기를 그림으로 표현했다.</li>
 		<li>이 작가는 자신의 작품 중 한 편을 골라 심사 대상으로 제출했다.</li>
 	</ol>
@@ -151,7 +151,7 @@
 	</div>
 	<ol>
 		<li>이번 지진은 늦은 밤에 일어났다.</li>
-		<li>시민들이 지진을 느껴 상황실에 신고를 했다.</li>
+		<li>시민들이 지진을 느껴 상황실에 신고를 했다. <strong class="correct">✓</strong></li>
 		<li>이번 지진으로 큰 피해를 입은 사람들이 많다.</li>
 		<li>이번 주에는 더 이상 지진이 일어나지 않을 것이다.</li>
 	</ol>
@@ -167,7 +167,7 @@
 		<p>(라) 안쪽 이가 상하기 쉬워서 더 꼼꼼하게 닦아야 하기 때문이다.</p>
 	</div>
 	<ol>
-		<li>(나)-(가)-(다)-(라)</li>
+		<li>(나)-(가)-(다)-(라) <strong class="correct">✓</strong></li>
 		<li>(나)-(라)-(가)-(다)</li>
 		<li>(다)-(가)-(라)-(나)</li>
 		<li>(다)-(나)-(라)-(가)</li>
@@ -185,7 +185,7 @@
 		<li>(나)-(가)-(라)-(다)</li>
 		<li>(나)-(다)-(가)-(라)</li>
 		<li>(다)-(라)-(가)-(나)</li>
-		<li>(다)-(나)-(라)-(가)</li>
+		<li>(다)-(나)-(라)-(가) <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -198,7 +198,7 @@
 	</div>
 	<ol>
 		<li>(가)-(다)-(나)-(라)</li>
-		<li>(가)-(라)-(나)-(다)</li>
+		<li>(가)-(라)-(나)-(다) <strong class="correct">✓</strong></li>
 		<li>(라)-(다)-(나)-(가)</li>
 		<li>(라)-(가)-(다)-(나)</li>
 	</ol>
@@ -213,7 +213,7 @@
 	<ol>
 		<li>소리 크기를 높여</li>
 		<li>단독 형태로 분리해</li>
-		<li>다양한 물건에 붙여</li>
+		<li>다양한 물건에 붙여 <strong class="correct">✓</strong></li>
 		<li>특수한 영역을 제한해</li>
 	</ol>
 </div>
