--- a/uj/zajecia/25-26z/ljk4/zajecia/znaki/2/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/znaki/2/index.html
@@ -266,54 +266,53 @@
 	<tr>
 		<td>區分</td>
 		<td>(수업, 초중고급)</td>
-		<td></td>
+		<td>대학생들은 한국어 수업에서 문법 수준에 따라 <strong>구분(區分)</strong>할 수 있어요.</td>
 	</tr>
 	<tr>
 		<td>充分</td>
 		<td>(음식, 준비하다)</td>
-		<td></td>
+		<td>설날에 오는 가족을 위해 음식을 <strong>충분(充分)</strong>히 준비해야 됩니다.</td>
 	</tr>
 	<tr>
 		<td>氣分</td>
 		<td>(운동, 좋아지다)</td>
-		<td></td>
+		<td>저녁에 운동장에서 친구하고 운동하면 <strong>기분(氣分)</strong>이 좋아져요.</td>
 	</tr>
 	<tr>
 		<td>德分</td>
 		<td>(한국 드라마, 한국말)</td>
-		<td></td>
+		<td>많은 사람들이 한국 드라마를 보는 <strong>덕분(德分)</strong>에 한국말은 요즘 인기가 많아졌어요.</td>
 	</tr>
 	<tr>
 		<td>部分</td>
 		<td>(한류, 한국 문화)</td>
-		<td></td>
+		<td>한류 덕분에 한국 문화가 <strong>부분(部分)</strong>적으로 외국에서 유명해졌어요.</td>
 	</tr>
 	<tr>
 		<td>人分</td>
 		<td>(우리 가족, 불고기)</td>
-		<td></td>
+		<td>우리 가족은 세 명이라서 식당에 가면 불고기 3<strong>인분(人分)</strong>을 주문해요.</td>
 	</tr>
 	<tr>
 		<td>身分</td>
 		<td>(외교관, 일하다)</td>
-		<td></td>
+		<td>외교관 <strong>신분(身分)</strong>은 외교 업무를 하는 것이다.</td>
 	</tr>
 	<tr>
 		<td>成分</td>
 		<td>(생명체, 구성하다)</td>
-		<td></td>
+		<td>생명체를 구성하는 가장 중요한 <strong>성분(成分)</strong>은 물이다.</td>
 	</tr>
 	<tr>
 		<td>水分</td>
 		<td>(피부 건강, 섭취하다)</td>
-		<td></td>
+		<td>피부 건강을 위해서는 <strong>수분(水分)</strong>을 많이 섭취하는 것이 좋아요.</td>
 	</tr>
 	<tr>
 		<td>親分</td>
 		<td>(그분, 오랫동안)</td>
-		<td></td>
+		<td>고등학교 때부터 오랫동안 그분과 <strong>친분(親分)</strong>이 있었어요.</td>
 	</tr>
 </table>
 
 </body></html>
-
