--- a/uj/zajecia/25-26z/ljk4/zajecia/znaki/3/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/znaki/3/index.html
@@ -126,17 +126,17 @@
 	<tr>
 		<td>文脈</td>
 		<td>(단어의 의미, 이해하지 못하다)</td>
-		<td></td>
+		<td>읽기 내용을 이해하지 못할 때는 단어의 의미를 <strong>문맥(文脈)</strong>에서 알아내는 것이 좋은 방법이다.</td>
 	</tr>
 	<tr>
 		<td>文法</td>
 		<td>(의사소통, 중요하다)</td>
-		<td></td>
+		<td>의사소통할 때는 <strong>문법(文法)</strong>이 제일 중요한 부분이에요.</td>
 	</tr>
 	<tr>
 		<td>文字</td>
 		<td>(전화, 바쁘다, 편하다)</td>
-		<td></td>
+		<td>제가 바빠서 전화받지 못하면 <strong>문자(文字)</strong>를 편하게 보내주세요.</td>
 	</tr>
 	<tr>
 		<td>文章</td>
