--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -129,16 +129,13 @@
 				<th scope="row">13</th>
 				<td>21 lutego 2025</td>
 				<td class="schedule-lecture">Lekcja 13</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/7">07. 제주도에 가려고 해요</a></td>
+				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/7-1">한반도 지리 (geografia Półwyspu Koreańskiego)</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">14</th>
 				<td>28 lutego 2025</td>
 				<td class="schedule-lecture">Lekcja 14</td>
-				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
