--- a/viiilo/zajecia/24-25z/jk2/zajecia/6-1/index.html
+++ b/viiilo/zajecia/24-25z/jk2/zajecia/6-1/index.html
@@ -109,4 +109,12 @@
 	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/39.%20川.png" alt="川"></li>
 </ul>
 
+<h2>Znaki chińskie cz. 3</h2>
+
+<ul class="gallery">
+	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/47.%20不.png" alt="不"></li>
+	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/49.%20中.png" alt="中"></li>
+	<li><img src="viiilo/zajecia/24-25z/jk2/pliki/znaki/57.%20仁.png" alt="仁"></li>
+</ul>
+
 </body></html>
