--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -376,19 +376,19 @@
 			</tr>
 			<tr>
 				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium<!--/a--></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">分, 文</td>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
 				<td>12 czerwca 2025</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/znaki/4">食 밥 식</a></td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
 				<td>17 czerwca 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(?–?, s. 2.01)</nobr></a></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(11.00–12.00, s. 2.01)</nobr></a></td>
+				<td class="schedule-exam">文, 食</td>
 			</tr>
 		</tbody>
 	</table>
